# FlowRAG

./: Dockerfile  Dockerfile.base-cpu  Dockerfile.base-gpu  README.md  pyproject.toml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README_zh.md  SECURITY.md  llms.txt
examples/: AgentCPM-Report-web.yaml  AgentCPM-Report.yaml  LLM.yaml  LightResearch.yaml  RAG-web.yaml  RAG.yaml  milvus_index.yaml  multiturn_chat.yaml
script/: api_usage_example.py  deploy_retriever_config.json  deploy_retriever_server.py
servers/benchmark/src/: benchmark.py
servers/corpus/: parameter.yaml
servers/corpus/src/: corpus.py
servers/custom/src/: custom.py
servers/evaluation/src/: evaluation.py
servers/generation/src/: generation.py
servers/prompt/src/: prompt.py
servers/reranker/src/: reranker.py
servers/retriever/src/: retriever.py
servers/retriever/src/index_backends/: milvus_backend.py
servers/router/src/: router.py
servers/sayhello/: parameter.yaml
servers/sayhello/src/: sayhello.py
src/flowrag/: api.py  cli.py  client.py  mcp_logging.py  server.py
ui/backend/: app.py  pipeline_manager.py
ui/frontend/: index.html  main.js  style.css
ui/frontend/i18n/: en.js  zh.js
